Add exam apis and some other missing apis (#10)
